# Qt-TextEdit

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  rec.qrc
